# Zadan2ParserTradeResult

./: .dockerignore  .env-example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 1ee480b573f5_.py  4c7370cdc8a6_.py  7f1908e78779_.py
trade_result_parser/core/: config.py  database.py  logging_config.py
trade_result_parser/models/: __init__.py  base.py  bulletin.py  mixins.py
trade_result_parser/scripts/: console_command.py  fetcher.py  loader_to_DB.py  orchestrator.py  parser.py
